IKDT-1140 Added transformation logic to merge SNOMED and RxNorm concepts (#40)