@@ -1,4 +1,7 @@
 --enable-preview
+--enable-native-access=ALL-UNNAMED
+--add-modules jdk.incubator.vector
 -Xmx12g
 -Xms1g
 -XX:+UseG1GC
+-XX:+UseStringDeduplication
